# smtp-test-tool

./: AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  deny.toml  rust-toolchain.toml  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
locales/: ar.toml  de.toml  en.toml  es.toml  fr.toml  it.toml  ja.toml  ko.toml  pt.toml  zh.toml
packaging/: README.md
packaging/homebrew/: smtp-test-tool.rb
packaging/scoop/: smtp-test-tool.json
packaging/winget/: Struis112.SmtpTestTool.installer.yaml  Struis112.SmtpTestTool.locale.en-US.yaml  Struis112.SmtpTestTool.yaml  StruisICT.SmtpTestTool.installer.yaml  StruisICT.SmtpTestTool.locale.en-US.yaml  StruisICT.SmtpTestTool.yaml
src/: config.rs  diagnostics.rs  i18n.rs  imap.rs  keystore.rs  lib.rs  oauth.rs  pop3.rs  providers.rs  runner.rs  smtp.rs  theme.rs  tls.rs
tools/: README.md  screenshot-macos.sh  screenshot.ps1  screenshot.sh
