[package]
name        = "smtp-test-tool"
version     = "0.1.0"
edition     = "2021"
rust-version = "1.75"
description = "Cross-platform SMTP / IMAP / POP3 connectivity tester with IT-actionable diagnostics."
license     = "MIT OR Apache-2.0"
repository  = "https://github.com/Struis112/smtp-test-tool"
homepage    = "https://github.com/Struis112/smtp-test-tool"
readme      = "README.md"
keywords    = ["smtp", "imap", "pop3", "email", "diagnostic"]
categories  = ["command-line-utilities", "email"]

[lib]
name = "smtp_test_tool"
path = "src/lib.rs"

[[bin]]
name = "smtp-test-tool"
path = "src/bin/cli.rs"

[[bin]]
name = "smtp-test-tool-gui"
path = "src/bin/gui.rs"
required-features = ["gui"]

[features]
default = ["gui"]
gui     = ["dep:eframe", "dep:egui", "dep:dark-light"]

[dependencies]
# CLI parsing
clap = { version = "4", features = ["derive", "env"] }

# Config (TOML, human-editable, with named profiles)
serde = { version = "1", features = ["derive"] }
toml  = "1"

# Logging - tracing lets both CLI and GUI subscribe to the same events
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "ansi", "fmt"] }

# Error handling
anyhow    = "1"

# TLS - rustls = pure Rust, no OpenSSL dep, fully portable single binary
rustls          = { version = "0.23", default-features = false, features = ["std", "ring", "tls12"] }
rustls-pki-types = "1"
rustls-pemfile  = "2"
webpki-roots    = "1"          # matches lettre 0.11.22 upstream

# SMTP
lettre = { version = "0.11", default-features = false, features = [
    "smtp-transport", "rustls-tls", "builder", "hostname",
    "ring", "webpki-roots"
] }

# Misc
base64    = "0.22"
chrono    = { version = "0.4", default-features = false, features = ["clock", "serde"] }
dirs      = "6"
once_cell = "1"

# GUI (optional, only built when --features gui is on, which is the default)
eframe    = { version = "0.28", optional = true, default-features = false, features = ["default_fonts", "glow", "persistence", "accesskit"] }
egui      = { version = "0.28", optional = true }
dark-light = { version = "2", optional = true }

[profile.release]
lto             = "thin"
codegen-units   = 1
strip           = true
opt-level       = "z"
panic           = "abort"
