[package]
name        = "smtp-test-tool"
version     = "0.1.6"
edition     = "2021"
rust-version = "1.92"
description = "Cross-platform SMTP / IMAP / POP3 connectivity tester with IT-actionable diagnostics."
license     = "MIT OR Apache-2.0"
repository  = "https://github.com/Struis112/smtp-test-tool"
homepage    = "https://github.com/Struis112/smtp-test-tool"
readme      = "README.md"
keywords    = ["smtp", "imap", "pop3", "email", "diagnostic"]
categories  = ["command-line-utilities", "email"]

[lib]
name = "smtp_test_tool"
path = "src/lib.rs"

[[bin]]
name = "smtp-test-tool"
path = "src/bin/cli.rs"

[[bin]]
name = "smtp-test-tool-gui"
path = "src/bin/gui.rs"
required-features = ["gui"]

[features]
default  = ["gui", "keychain"]
# The GUI ships with system-font discovery so CJK / Arabic / Devanagari /
# Thai glyphs render correctly when the user picks a non-Latin locale.
# The cost is one extra dep (`fontdb`) plus a brief font-scan on startup.
gui      = ["dep:eframe", "dep:egui", "dep:fontdb"]
# Real OS keychain backing (Windows Credential Manager / macOS Keychain /
# Linux Secret Service).  Optional so a stripped-down CLI build can skip
# the libdbus dependency on Linux.
keychain = ["dep:keyring"]

[dependencies]
# CLI parsing
clap = { version = "4", features = ["derive", "env"] }

# Config (TOML, human-editable, with named profiles)
serde = { version = "1", features = ["derive"] }
toml  = "1"

# Logging - tracing lets both CLI and GUI subscribe to the same events
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "ansi", "fmt"] }

# Error handling
anyhow    = "1"

# TLS - rustls = pure Rust, no OpenSSL dep, fully portable single binary.
# pki-types >=1.9 exposes the PemObject API we use to load CA bundles
# (replaces the now-unmaintained rustls-pemfile, RUSTSEC-2025-0134).
rustls          = { version = "0.23", default-features = false, features = ["std", "ring", "tls12"] }
rustls-pki-types = { version = "1.9", features = ["std"] }
webpki-roots    = "1"          # matches lettre 0.11.22 upstream

# SMTP
lettre = { version = "0.11", default-features = false, features = [
    "smtp-transport", "rustls-tls", "builder", "hostname",
    "ring", "webpki-roots"
] }

# Misc
chrono    = { version = "0.4", default-features = false, features = ["clock", "serde"] }
dirs      = "6"
once_cell = "1"
sys-locale = "0.3"  # cross-platform OS-language detection for i18n auto-mode

# OS-native credential storage (Windows Credential Manager / macOS
# Keychain / Linux Secret Service via dbus).  Pinned to the 3.x line
# deliberately: keyring 4.x repurposed the crate name for a CLI tool
# and split the library into 'keyring-core' + per-OS backend stores,
# which would multiply our dep tree (turso SQLite engine, dbus +
# zbus, ...).  3.6.3 is the last release of the simple Entry-based
# library API and is still receiving fixes from the same upstream.
keyring   = { version = "3.6", optional = true }

# GUI (optional, only built when --features gui is on, which is the default)
eframe    = { version = "0.34", optional = true, default-features = false, features = ["default_fonts", "glow", "persistence", "accesskit"] }
egui      = { version = "0.34", optional = true }
# System-font discovery for non-Latin scripts (CJK, Arabic, Devanagari,
# Thai).  Read by `src/fonts.rs` at GUI startup to add OS-installed font
# files to egui's per-glyph fallback chain - no embedded MB of Noto.
# Defaults give us std + fs + memmap + fontconfig.  We keep them on:
#  - 'fs' is required for the load_system_fonts() entry point we use.
#  - 'memmap' avoids reading every system font into RAM up front.
#  - 'fontconfig' is Linux-only and the standard discovery mechanism
#    there; ignored on Windows / macOS.
fontdb    = { version = "0.23", optional = true }

[profile.release]
lto             = "thin"
codegen-units   = 1
strip           = true
opt-level       = "z"
panic           = "abort"
