[package]
name        = "smtp-test-tool"
version     = "0.2.0"
edition     = "2021"
rust-version = "1.92"
description = "Cross-platform SMTP / IMAP / POP3 connectivity tester with IT-actionable diagnostics."
license     = "MIT OR Apache-2.0"
repository  = "https://github.com/StruisICT/smtp-test-tool"
homepage    = "https://github.com/StruisICT/smtp-test-tool"
readme      = "README.md"
keywords    = ["smtp", "imap", "pop3", "email", "diagnostic"]
categories  = ["command-line-utilities", "email"]

[lib]
name = "smtp_test_tool"
path = "src/lib.rs"

[[bin]]
name = "smtp-test-tool"
path = "src/bin/cli.rs"

[[bin]]
name = "smtp-test-tool-gui"
path = "src/bin/gui.rs"
required-features = ["gui"]

[features]
default  = ["gui", "keychain", "dns", "oauth"]
# The GUI ships with system-font discovery so CJK / Arabic / Devanagari /
# Thai glyphs render correctly when the user picks a non-Latin locale.
# The cost is one extra dep (`fontdb`) plus a brief font-scan on startup.
gui      = ["dep:eframe", "dep:egui", "dep:fontdb", "dep:webbrowser"]
# Real OS keychain backing (Windows Credential Manager / macOS Keychain /
# Linux Secret Service).  Optional so a stripped-down CLI build can skip
# the libdbus dependency on Linux.
keychain = ["dep:keyring"]
# DNS-side checks (MX / SPF / DMARC / A / PTR) for the Diagnose tab and
# the `smtp-test-tool dns <domain>` CLI subcommand.  Pulls in hickory-
# resolver 0.26 and a single-threaded tokio runtime that we spin up
# on-demand for each audit; the rest of the codebase stays sync.
dns      = ["dep:hickory-resolver", "dep:tokio"]
# OAuth2 device-code flow (RFC 8628) for Microsoft 365 mailboxes that
# have legacy Basic Auth disabled.  Adds ureq + serde_json; no extra
# tokio because device-code is a single POST + a polling loop.
oauth    = ["dep:ureq", "dep:serde_json", "dep:serde_urlencoded"]
# Opt-in network-bound integration tests.  Off by default so plain
# `cargo test` works without internet.  Enable with `cargo test
# --features live-net` when you actually want the live DNS / OAuth
# probes to run.
live-net = []

[dependencies]
# CLI parsing
clap = { version = "4", features = ["derive", "env"] }

# Config (TOML, human-editable, with named profiles)
serde = { version = "1", features = ["derive"] }
toml  = "1"

# Logging - tracing lets both CLI and GUI subscribe to the same events
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "ansi", "fmt"] }

# Error handling
anyhow    = "1"
thiserror = "2"

# TLS - rustls = pure Rust, no OpenSSL dep, fully portable single binary.
# pki-types >=1.9 exposes the PemObject API we use to load CA bundles
# (replaces the now-unmaintained rustls-pemfile, RUSTSEC-2025-0134).
rustls          = { version = "0.23", default-features = false, features = ["std", "ring", "tls12"] }
rustls-pki-types = { version = "1.9", features = ["std"] }
webpki-roots    = "1"          # matches lettre 0.11.22 upstream

# SMTP
lettre = { version = "0.11", default-features = false, features = [
    "smtp-transport", "rustls-tls", "builder", "hostname",
    "ring", "webpki-roots"
] }

# Misc
chrono    = { version = "0.4", default-features = false, features = ["clock", "serde"] }
dirs      = "6"
once_cell = "1"
sys-locale = "0.3"  # cross-platform OS-language detection for i18n auto-mode

# OS-native credential storage (Windows Credential Manager / macOS
# Keychain / Linux Secret Service via dbus).  Pinned to the 3.x line
# deliberately: keyring 4.x repurposed the crate name for a CLI tool
# and split the library into 'keyring-core' + per-OS backend stores,
# which would multiply our dep tree (turso SQLite engine, dbus +
# zbus, ...).  3.6.3 is the last release of the simple Entry-based
# library API and is still receiving fixes from the same upstream.
keyring   = { version = "4.0", optional = true }

# GUI (optional, only built when --features gui is on, which is the default)
eframe    = { version = "0.34", optional = true, default-features = false, features = ["default_fonts", "glow", "persistence", "accesskit"] }
egui      = { version = "0.34", optional = true }
# System-font discovery for non-Latin scripts (CJK, Arabic, Devanagari,
# Thai).  Read by `src/fonts.rs` at GUI startup to add OS-installed font
# files to egui's per-glyph fallback chain - no embedded MB of Noto.
# Defaults give us std + fs + memmap + fontconfig.  We keep them on:
#  - 'fs' is required for the load_system_fonts() entry point we use.
#  - 'memmap' avoids reading every system font into RAM up front.
#  - 'fontconfig' is Linux-only and the standard discovery mechanism
#    there; ignored on Windows / macOS.
fontdb    = { version = "0.23", optional = true }
# Best-effort 'open a URL in the user's default browser' for the OAuth
# device-code flow.  ~70 LoC under the hood, just calls cmd /c start on
# Windows, `open` on macOS, xdg-open on Linux.
webbrowser = { version = "1", optional = true }

# DNS resolver for the optional `dns` feature.  We keep all the heavy
# hickory features (h3, https, dnssec, tls) OFF - we only need the
# stock UDP/TCP resolver.
hickory-resolver = { version = "0.26", optional = true, default-features = false, features = ["system-config", "tokio"] }
# Single-threaded tokio runtime for hickory.  No macros, no io-util,
# nothing else - the smallest feature set we can still build hickory
# against.
tokio     = { version = "1",   optional = true, default-features = false, features = ["rt", "time", "net"] }

# OAuth2 device-code flow.  ureq is sync + rustls (matches our wider
# 'no openssl' stance); serde_json parses the OAuth token responses.
ureq      = { version = "3",   optional = true, default-features = false, features = ["rustls", "json", "platform-verifier"] }
serde_json     = { version = "1", optional = true }
serde_urlencoded = { version = "0.7", optional = true }

# Tuned for download size, not raw throughput: this is an I/O- and
# network-bound diagnostic tool (it waits on TLS handshakes and server
# replies, not on CPU), so `opt-level = "z"` trades a negligible amount
# of runtime speed for a meaningfully smaller binary that IT staff pull
# from a release page or a package manager.  `panic = "abort"` drops the
# unwinding tables (smaller still) and matches our "a panic is a bug, not
# a recoverable condition" stance.  Revisit `opt-level` if a future
# CPU-bound feature (bulk crypto, large parsing) lands.
[profile.release]
lto             = "thin"
codegen-units   = 1
strip           = true
opt-level       = "z"
panic           = "abort"
